# GIF-Tools

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT_PLAN.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  run_gui.py  venv.bat  venv.sh
.github/workflows/: ci.yml  code-quality.yml  release.yml
desktop_app/: README.md  __init__.py  main.py
desktop_app/gui/tool_panels/: __init__.py  add_text_panel.py  combine_frames_panel.py  crop_panel.py  extract_frames_panel.py  filter_effects_panel.py  format_conversion_panel.py  free_play_panel.py  loop_settings_panel.py  merge_panel.py  optimize_panel.py  rearrange_panel.py  resize_panel.py  reverse_panel.py  rotate_panel.py  speed_control_panel.py  split_panel.py  video_to_gif_panel.py  watermark_panel.py
docs/source/: api_reference.rst  conf.py  development.rst  index.rst  installation.rst  user_guide.rst
frames_output/: frame_list.csv
gif_tools/: __init__.py
gif_tools/core/: __init__.py  add_text.py  batch_processing.py  crop.py  extract_frames.py  filter_effects.py  format_conversion.py  free_play.py  loop_settings.py  merge.py  optimize.py  rearrange.py  resize.py  reverse.py  rotate.py  speed_control.py  split.py  video_to_gif.py  watermark.py
gif_tools/tests/: __init__.py
gif_tools/utils/: __init__.py  constants.py  file_handlers.py  image_utils.py  validation.py
requirements/: base.txt  desktop.txt  dev.txt  web.txt
tests/: __init__.py  conftest.py  test_performance.py
tests/integration/: __init__.py  test_workflows.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: __init__.py  test_additional_tools.py  test_advanced_tools.py  test_basic_tools.py  test_utils.py
web_api/: __init__.py
